<resources>
    <string name="app_name">Ponnobd</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="welcome_to_you">WELCOME TO PONNOBD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="do_you_have_an_account_sign_in">Do you have an account? Sign In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="browse_as_guest">Browse As Guest</string>
    <string name="categories">Categories</string>
    <string name="show_all">Show all</string>
    <string name="category">category</string>
    <string name="top_rated_products">Top Rated Products</string>
</resources>