<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="126dp"
            android:layout_height="157dp"
            android:paddingBottom="10dp"
            android:src="@drawable/main_top"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textColor="#68329b"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:layout_marginStart="@dimen/_50sdp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:background="@drawable/login"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/sign"
        android:text="@string/email"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/sign"
        android:text="@string/password"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="#68329b"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"/>

    <Button
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="Login"
        android:textColor="#fff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#68329b"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>