<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:paddingBottom="10dp"
                android:src="@drawable/signup_top"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:letterSpacing="0.03"
                android:text="SIGNUP"
                android:textColor="#68329b"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="310dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/signup" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/sign"
            android:text="@string/email" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign"
            android:text="@string/password" />

        <EditText
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign"
            android:text="@string/confirm_password" />

        <Button
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textColor="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/do_you_have_an_account_sign_in"
            android:textColor="#68329b" />

    </LinearLayout>
</ScrollView>