<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_125sdp"
                android:layout_height="@dimen/_155sdp"
                android:paddingBottom="10dp"
                android:src="@drawable/main_top"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/welcome_to_you"
                android:textColor="#68329b"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/chat" />

        <Button
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#fff" />

        <Button
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/sign"
            android:text="@string/signup"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse_as_guest"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>


    </LinearLayout>



</ScrollView>